# CodeCoverageCMake

./: .travis.yml  CMakeLists.txt  README.md
cmake/: Coveralls.cmake  CoverallsGenerateGcov.cmake  gtest.cmake  third_party.cmake
src/: base.cc  base.h
test/: TEST_base.c  TEST_base.cc  TEST_normal.cc
